force-app/main/default/objects/Data_Sharing__c/Data_Sharing__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Data Aggregation Integration Settings</description>
    <label>Data Sharing</label>
</CustomObject>