force-app/main/default/objects/Data_Sharing__c/fields/Data_Source_Name__c.field-meta.xml
<CustomField>
        <fullName>Data_Source_Name__c</fullName>
        <label>Data Source Name</label>
        <length>100</length>
        <type>Text</type>
</CustomField>