force-app/main/default/objects/Data_Sharing__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable/Disable Data Sharing Settings</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>